--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -6,10 +6,21 @@
     margin-top: 30vh;
 }
 
-.float-left {
-    float: left;
-}
-
 .float-right {
     float: right;
+}
+
+#sig-canvas {
+    border: 1px solid rgba(34,36,38,.15);
+    border-radius: 6px;
+    cursor: crosshair;
+}
+
+.red {
+    background: red;
+}
+
+#require-margin {
+    margin-left: .5rem;
+    margin-right: .5rem;
 }
