--- a/app/client/style.css
+++ b/app/client/style.css
@@ -7,3 +7,32 @@
   border: none;
   box-shadow: none;
 }
+
+.sizeOf {
+  padding-left: 125px;
+  padding-right: 125px;
+  border: medium;
+  padding-bottom: 25px;
+}
+
+.legalDiscretion {
+  max-height: 200px;
+  font-family: 'sans-serif';
+  font-size: medium;
+  overflow-y: scroll;
+  border: black;
+}
+
+.termsAndConditions {
+  padding-top: 25px;
+  padding-bottom: 50px;
+}
+
+.title {
+  font-family: 'sans-serif';
+  text-align: center;
+}
+
+.formFills {
+  padding-bottom: 25px;
+}
