--- a/app/client/style.css
+++ b/app/client/style.css
@@ -17,6 +17,10 @@
 
 /* START: 7th to 9th Form Section */
 
+.add-margin-top-10px {
+  margin-top: 10px;
+}
+
 .add-margin-top-20px {
   margin-top: 20px;
 }
