--- a/app/client/style.css
+++ b/app/client/style.css
@@ -51,9 +51,9 @@
   background: red;
 }
 
-.require-margin {
-  margin-left: .5rem !important;
-  margin-right: .5rem !important;
+#require-margin {
+  margin-left: .5rem;
+  margin-right: .5rem;
 }
 
 /* END: 7th to 9th Form Section */
