--- a/app/client/style.css
+++ b/app/client/style.css
@@ -15,6 +15,16 @@
   padding-top: 100px;
 }
 
+/* 1st Form Section */
+.ui.divider.divider-props {
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+/* END: 1st Form Section */
+
+
+
 /* START: 7th to 9th Form Section */
 
 .add-margin-top-10px {
@@ -86,3 +96,4 @@
 .formFills {
   padding-bottom: 25px;
 }
+
