--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,12 +1,58 @@
 .ui.borderless.middle.Menu {
   alignment: center;
   border: none;
+  background-color: #395878 !important;
 }
 
-.LogoHP {
+.gemsLogo {
+  padding-right: 100px;
   border: none;
   box-shadow: none;
+  padding-top: 100px;
 }
+
+#footer {
+  padding-top: 100px;
+}
+
+/* START: 7th to 9th Form Section */
+
+.add-margin-top-20px {
+  margin-top: 20px;
+}
+
+.add-margin-top-40px {
+  margin-top: 40px;
+}
+
+.add-margin-top-30vh {
+  margin-top: 30vh;
+}
+
+.float-right {
+  float: right;
+}
+
+.align-right {
+  text-align: right;
+}
+
+#sig-canvas {
+  border: 1px solid rgba(34, 36, 38, .15);
+  border-radius: 6px;
+  cursor: crosshair;
+}
+
+.red {
+  background: red;
+}
+
+.require-margin {
+  margin-left: .5rem !important;
+  margin-right: .5rem !important;
+}
+
+/* END: 7th to 9th Form Section */
 
 .sizeOf {
   padding-left: 125px;
