--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,5 +1,5 @@
 .ui.borderless.top.Menu {
-  alignment: center;
+  align-content: center;
   border: none;
   background-color: #395878 !important;
 }
