--- a/app/client/style.css
+++ b/app/client/style.css
@@ -133,3 +133,9 @@
   font-size: 30px;
   align-content: center;
 }
+
+.footer {
+  padding-left: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
