--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,7 +1,9 @@
 .ui.borderless.top.Menu {
   align-content: center;
   border: none;
+  box-shadow: none;
   background-color: #395878 !important;
+  padding-bottom: 30px;
 }
 
 .gemsLogo {
@@ -118,10 +120,18 @@
 .LogoTitle {
   font-size: 30px;
   align-content: center;
+  color: Black;
 }
 
 .footer {
   padding-left: 30px;
   padding-top: 30px;
   padding-bottom: 30px;
+}
+
+.hawaii-background {
+  background: url("https://images.unsplash.com/photo-1460355591219-452ee2548432?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80") bottom fixed;
+  background-size: auto;
+  height: 500px;
+  padding-top: 20px;
 }
