added timeline to homepage

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -159,3 +159,12 @@
 .headers {
   font-size: 20px;
 }
+
+.processImage {
+  alignment: center;
+  padding-left: 5%;
+}
+
+.processImageTitle {
+  alignment: center;
+}
