Added stuff to HP
Forgot to work in other branch sorry.

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -161,10 +161,8 @@
 }
 
 .processImage {
-  alignment: center;
   padding-left: 5%;
+  alignment: center;
+  text-align: center;
 }
 
-.processImageTitle {
-  alignment: center;
-}
